--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
       <a class="navbar-brand ms-3" href="#">
         <img src="https://codeworks.blob.core.windows.net/public/assets/img/cw-mark.png" height="45" alt=""
           loading="lazy">
-        <span class="ms-2">Trivia Game</span>
+        <span class="ms-2">30 Second Trivia!</span>
       </a>
     </nav>
   </header>
   <main>
-    <div class="container-fluid">
+    <div class="container-fluid bg-secondary">
+      <h1 class="text-center">30 Second Trivia!</h1>
       <div class="row" id="questions">
 
 
